# AI-SKILL-CREATOR

./: .gitignore  README.md  main.js  package-lock.json  package.json  preload.js
.github/workflows/: build.yml
scripts/: generate-icon.mjs  generate-icons.mjs
src/: app.js  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: commands.rs  lib.rs  main.rs
