[package]
name = "ai-skill-generator"
version = "1.0.0"
edition = "2021"

[lib]
name = "ai_skill_generator_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
flate2 = "1"
tar = "0.4"
tokio = { version = "1", features = ["full"] }
